<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo_memory"
        android:src="@drawable/memory_logo"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="120dp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:text="@string/etq_puntos"
        app:layout_constraintTop_toBottomOf="@+id/logo_memory"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/etqTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/etq_tiempo"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/etq_err"
        app:layout_constraintStart_toEndOf="@+id/subtitle"
        app:layout_constraintTop_toBottomOf="@+id/logo_memory" />

    <TextView
        android:id="@+id/etq_err"
        android:layout_width="wrap_content"
        android:text="@string/etq_err"
        app:layout_constraintTop_toBottomOf="@+id/logo_memory"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTablero"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:layout_constraintBottom_toTopOf="@id/btn_inicio"
        android:layout_width="match_parent"
        tools:listitem="@layout/layout_celda"
        android:overScrollMode="never"
        android:layout_height="0dp"/>


    <Button
        android:id="@+id/btn_inicio"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_inicio"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_giveUp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_giveUp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>